--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 .dart_tool
 .idea
-build/*
+build/**/*
 .flutter-plugins-dependencies
 .packages
 .flutter-plugins
-.idea/misc.xml
-.idea/toktik.iml
-ios/build
+ios/build/**/*
