--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,19 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
   video_player: ^2.1.4 
   stacked_services: ^0.8.6
+  dio: ^4.0.0-beta6
+  get: ^4.1.4
   get_it: ^7.1.3
   stacked: ^2.1.7
   cached_network_image: ^3.0.0
   firebase_core : ^1.2.0
   cloud_firestore: ^2.2.0
+  # loading
+  flutter_easyloading: ^3.0.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
