--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -16,12 +16,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   video_player: ^2.1.4 
   stacked_services: ^0.8.6
+  pull_to_refresh: 1.6.4-nullsafety.1
   dio: ^4.0.0-beta6
   get: ^4.1.4
   get_it: ^7.1.3
   stacked: ^2.1.7
   cached_network_image: ^3.0.0
   firebase_core : ^1.2.0
+  event_bus: ^2.0.0
   cloud_firestore: ^2.2.0
   # loading
   flutter_easyloading: ^3.0.0
