--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   dio: ^4.0.0-beta6
   get: ^4.1.4
   get_it: ^7.1.3
+  like_button: ^2.0.2
+  oktoast: ^3.0.0
+  marquee: ^2.1.0
   stacked: ^2.1.7
   cached_network_image: ^3.0.0
   firebase_core : ^1.2.0
