--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  amplify_flutter: ^0.2.0
+  amplify_datastore: ^0.2.0
+  amplify_api: ^0.2.0
+  amplify_auth_cognito: ^0.2.0
+
   cupertino_icons: ^1.0.2
   video_player: ^2.1.4 
   stacked_services: ^0.8.6
@@ -46,7 +52,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/video/
+    - assets/images/
   fonts:
     - family:  TikTokIcons
       fonts:
