--- a/amplify/backend/auth/toktikf7d4ff65/toktikf7d4ff65-cloudformation-template.yml
+++ b/amplify/backend/auth/toktikf7d4ff65/toktikf7d4ff65-cloudformation-template.yml
@@ -114,38 +114,19 @@ Parameters:
             
             
             
-  serviceName:
-    Type: String
-  
-            
-        
-  usernameAttributes:
-    Type: CommaDelimitedList
-      
   useDefault:
     Type: String
   
-            
-  
-  userPoolGroups:
-    Type: String
             
         
   userPoolGroupList:
     Type: CommaDelimitedList
       
-  
-  adminQueries:
-    Type: String
             
-  
-  thirdPartyAuth:
+  serviceName:
     Type: String
+  
             
-        
-  authProviders:
-    Type: CommaDelimitedList
-      
   
   usernameCaseSensitive:
     Type: String
@@ -154,11 +135,6 @@ Parameters:
   dependsOn:
     Type: CommaDelimitedList
       
-            
-  
-  hostedUI:
-    Type: String
-            
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
   
@@ -173,7 +149,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'toktik68b99c78_sns-role', !Join ['',[ 'sns', '68b99c78', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'toktikf7d4ff65_sns-role', !Join ['',[ 'sns', 'f7d4ff65', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -185,10 +161,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: toktik68b99c78_role_external_id
+                sts:ExternalId: toktikf7d4ff65_role_external_id
       Policies:
         -
-          PolicyName: toktik68b99c78-sns-policy
+          PolicyName: toktikf7d4ff65-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -224,6 +200,8 @@ Resources:
       
         - email
       
+        - phone_number
+      
       
       
       EmailVerificationMessage: !Ref emailVerificationMessage
@@ -232,20 +210,20 @@ Resources:
       Policies:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
-          RequireLowercase: true
-          RequireNumbers: true
+          RequireLowercase: false
+          RequireNumbers: false
           RequireSymbols: false
           RequireUppercase: false
       
-      UsernameAttributes: !Ref usernameAttributes
       
+      AliasAttributes: !Ref aliasAttributes
       
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: toktik68b99c78_role_external_id
+        ExternalId: toktikf7d4ff65_role_external_id
     
   
   UserPoolClientWeb:
@@ -253,7 +231,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: toktik68b99c78_app_clientWeb
+      ClientName: toktikf7d4ff65_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -263,7 +241,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: toktik68b99c78_app_client
+      ClientName: toktikf7d4ff65_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -274,7 +252,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '68b99c78', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'f7d4ff65', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -328,7 +306,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: toktik68b99c78_userpoolclient_lambda_iam_policy
+      PolicyName: toktikf7d4ff65_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -345,7 +323,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: toktik68b99c78_userpoolclient_lambda_log_policy
+      PolicyName: toktikf7d4ff65_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -385,7 +363,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'testAuthIdentityPool', !Join ['',['testAuthIdentityPool', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'toktikf7d4ff65_identitypool_f7d4ff65', !Join ['',['toktikf7d4ff65_identitypool_f7d4ff65', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
