--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,19 +8,19 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 7,
-              "description": ""
+              "apiKeyExpirationDays": 30,
+              "description": "api key description"
             }
           },
           "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AWS_IAM"
+            },
             {
               "authenticationType": "AMAZON_COGNITO_USER_POOLS",
               "userPoolConfig": {
                 "userPoolId": "authtoktikf7d4ff65"
               }
-            },
-            {
-              "authenticationType": "AWS_IAM"
             }
           ]
         }
