add amplify pinpoint support

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -52,5 +52,11 @@
         ]
       }
     }
+  },
+  "analytics": {
+    "toktik": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
