--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   amplify_datastore: ^0.2.0
   amplify_api: ^0.2.0
   amplify_auth_cognito: ^0.2.0
+  amplify_analytics_pinpoint: ^0.2.0
 
   cupertino_icons: ^1.0.2
   video_player: ^2.1.4 
