add lambda function listPostExs and lambda layer toktikgraphqlLambdaLayer
https://docs.amplify.aws/guides/functions/graphql-from-lambda/q/platform/js/#query

https://docs.amplify.aws/guides/functions/dynamodb-from-js-lambda/q/platform/js/#querying-a-table

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -4,10 +4,14 @@
   ],
   "projectName": "toktik",
   "version": "3.1",
-  "frontend": "flutter",
-  "flutter": {
+  "frontend": "javascript",
+  "javascript": {
+    "framework": "none",
     "config": {
-      "ResDir": "./lib/"
+      "SourceDir": "src",
+      "DistributionDir": "dist",
+      "BuildCommand": "npm run-script build",
+      "StartCommand": "npm run-script start"
     }
   }
 }
