update likePost to fix several bugs

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -94,6 +94,13 @@
       "service": "Lambda",
       "dependsOn": [
         {
+          "category": "function",
+          "resourceName": "toktikgraphqlLambdaLayer",
+          "attributes": [
+            "Arn"
+          ]
+        },
+        {
           "category": "api",
           "resourceName": "toktik",
           "attributes": [
