update amplify artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ build/**/*
 .flutter-plugins
 ios/build/**/*
 
+
+.vscode/settings.json
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
@@ -25,6 +28,5 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+**.sample
 #amplify-do-not-edit-end
-
-.vscode/settings.json
