--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -4,14 +4,10 @@
   ],
   "projectName": "toktik",
   "version": "3.1",
-  "frontend": "javascript",
-  "javascript": {
-    "framework": "none",
+  "frontend": "flutter",
+  "flutter": {
     "config": {
-      "SourceDir": "src",
-      "DistributionDir": "dist",
-      "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start"
+      "ResDir": "./lib/"
     }
   }
 }
