--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,15 @@ build/**/*
 .flutter-plugins
 ios/build/**/*
 
+
+.vscode/settings.json
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
 amplify/backend/.temp
 build/
 dist/
@@ -25,6 +27,5 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+**.sample
 #amplify-do-not-edit-end
-
-.vscode/settings.json
