--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.5
   package_info_plus: ^1.0.2
   pin_code_fields: ^7.3.0
+  email_validator: '^1.0.0'
 
 dev_dependencies:
   flutter_test:
