--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   email_validator: ^2.0.1
   webview_flutter: ^3.0.0
   share_plus: ^3.0.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
