--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: toktik
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.1.3+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -21,7 +21,7 @@ dependencies:
   amplify_analytics_pinpoint: ^0.2.0
 
   cupertino_icons: ^1.0.2
-  video_player: ^2.1.4 
+  video_player: ^2.1.4
   stacked_services: ^0.8.6
   pull_to_refresh: 1.6.4-nullsafety.1
   dio: ^4.0.0-beta6
@@ -58,7 +58,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -71,8 +70,8 @@ flutter:
     - assets/images/login/question.png
     - assets/images/login/nav-arrow-left.png
     - assets/images/main_page_bottom_icon/
+    - assets/images/feed_publish/
   fonts:
-    - family:  TikTokIcons
+    - family: TikTokIcons
       fonts:
-       - asset: assets/fonts/TikTokIcons.ttf
-
+        - asset: assets/fonts/TikTokIcons.ttf
