feat(share): add amplify prediction

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -124,5 +124,12 @@
         }
       ]
     }
+  },
+  "predictions": {
+    "toktikTranscription": {
+      "providerPlugin": "awscloudformation",
+      "service": "Transcribe",
+      "convertType": "transcription"
+    }
   }
 }
