feat(amplify-lambda): add function
add transcribeAudioPart function to AWS Amplify

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -123,6 +123,20 @@
           ]
         }
       ]
+    },
+    "transcribeAudioPart": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "toktikgraphqlLambdaLayer",
+          "attributes": [
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "predictions": {
