feat(lambda): execute transcribeAudioPart
setup AWS Lambda client to call transcribeAudioPart

--- a/amplify/backend/function/transcribeAudioPart/src/package.json
+++ b/amplify/backend/function/transcribeAudioPart/src/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.92",
-    "follow-redirects": "^1.14.9"
+    "@types/aws-lambda": "^8.10.92"
   }
 }
