--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   webview_flutter: ^3.0.0
   share_plus: ^3.0.4
   flutter_spinkit: ^5.1.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
