--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   share_plus: ^3.0.4
   flutter_spinkit: ^5.1.0
   path_provider: ^2.0.9
+  animations: ^2.0.2
 
 dev_dependencies:
   flutter_test:
