--- a/amplify/backend/function/toktikgraphqlLambdaLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/toktikgraphqlLambdaLayer/lib/nodejs/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "graphql": "^15.6.1",
-    "graphql-tag": "^2.12.5",
-    "papaparse": "^5.3.2"
-  }
+    "graphql-tag": "^2.12.5"
+  },
+  "devDependencies": {}
 }
