--- a/amplify/backend/function/toktikgraphqlLambdaLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/toktikgraphqlLambdaLayer/lib/nodejs/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.23.0",
+    "file-type": "^17.1.1",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
     "papaparse": "^5.3.2"
