--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
 amplify/backend/.temp
+amplify/.temp
 build/
 dist/
 node_modules/
