--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   path_provider: ^2.0.9
   animations: ^2.0.2
+  wakelock: ^0.6.1+2
 
 dev_dependencies:
   flutter_test:
